# lg_sgu_vision_v2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
common/: config.py
data/camera/: camera_asm_asm.stp
docker/: Dockerfile  README.md  compose.yaml  install_env.sh  verify_env.sh
docs/: README.md  architecture.md  clustering.md  config.md  curobo_v0.8_migration.md  generate_viewpoints.md  generate_viewpoints_pipeline.md  getting-started.md  glns_path.md  isaac_sim_full_setup.md  moveit_cumotion_ur20.md  moveit_inspection_mode.md  plan_trajectory.md  run_2x2_modes.md  running.md  select_ik_dp.md  setup_docker.md  setup_isaac_sim.md  setup_ursim.md  viewpoint_app.md  viewpoint_studio.md  visualize_viewpoints.md
docs/archive/: square-structure-inner-walls.md  zigzag-row-assignment-issue.md
docs/guides/: environment-setup.md  isaac-modes.md  prepare-object-assets.md  troubleshooting.md
docs/logs/: 2026-04-15.md  2026-04-16.md  2026-04-26.md  2026-04-27.md  2026-04-29.md  2026-05-14.md  2026-06-10.md  2026-06-11.md  2026-06-24.md  2026-06-26.md  2026-06-28.md  2026-06-29.md  2026-07-01.md  2026-07-09.md
docs/reference/: algorithms.md  architecture.md  camera-geometry.md  configuration.md  data-formats.md  internal-cli.md
docs/workflows/: create-viewpoints.md  execute-on-robot.md  plan-trajectory.md  simulate-and-preview.md
scripts/: generate_viewpoints.py  move_to_start.py  plan_motion.py  publish_trajectory.py  publish_workcell_markers.py  ur_ros2_joint_control.py  visualize_coacd.py  visualize_viewpoints.py
scripts/apps/: glns_inspector.py  ik_inspector.py  isaac_pipeline.py  trajectory_studio.py  viewpoint_studio.py
scripts/common/: config.py  glns_utils.py  math_utils.py  viewpoint_viz.py  viz_utils.py
scripts/core/: __init__.py  check_viewpoint_ik.py  generate_viewpoints.py  ik_backend.py  plan_trajectory.py  publish_trajectory.py  solve_glns_path.py  verify_glns_trajectory.py
scripts/isaac/: joint_control.py  launch_sim.py  load_environment.py  load_workcell.py  pipeline_ui.py  scene.py  ur_ros2_joint_control.py
scripts/moveit/: isaac_joint_command_relay.py  ur20.xrdf  (+3 more)
tests/: test_config_support.py  test_glns_julia_integration.py  test_glns_motion_wrist3.py  test_glns_pose_augmentation.py  test_glns_utils.py  test_viewpoint_adjacency.py
ur20_description/: ur.usda  ur10_mount.usd  ur20_with_camera.urdf  ur20_with_camera.yml  ur20_with_camera_curobo.urdf
(+298 files in other folders)
