[project]
name = "curobo-ws"
version = "0.1.0"
description = "cuRobo workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0",
    "torchvision",
    "torchaudio",
    "ortools>=9.15.6755",
    "numpy",
    "scipy",
    "scikit-learn",
    "h5py",
    "trimesh",
    "plotly",
    "pyyaml",
    "warp-lang",
    "yourdfpy",
    "open3d",
    "coacd",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.workspace]
exclude = [
    "arm_coverage",
]
