[project]
name = "lg-sgu-vision"
version = "0.1.0"
description = "cuRobo workspace"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.10.0",
    "torchvision",
    "ortools>=9.15.6755",
    "numpy",
    "scipy",
    "scikit-learn",
    "h5py",
    "trimesh",
    "plotly",
    "pyyaml",
    "warp-lang>=1.12,<1.13",
    "yourdfpy",
    "open3d",
    "coacd",
    "isaacsim[all,extscache]==6.0.0",
    "nvidia-curobo[cu12] @ git+https://github.com/NVlabs/curobo.git@v0.8.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"
no-build-isolation-package = ["nvidia-curobo"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"